project(
  'array_api_compat',
  version: '1.13.0',
)

sources = {
  'array_api_compat': files(
    'array_api_compat/array_api_compat/__init__.py',
    'array_api_compat/array_api_compat/_internal.py',
  ),

  'array_api_compat/common': files(
    'array_api_compat/array_api_compat/common/__init__.py',
    'array_api_compat/array_api_compat/common/_aliases.py',
    'array_api_compat/array_api_compat/common/_fft.py',
    'array_api_compat/array_api_compat/common/_helpers.py',
    'array_api_compat/array_api_compat/common/_linalg.py',
    'array_api_compat/array_api_compat/common/_typing.py',
  ),

  'array_api_compat/cupy': files(
    'array_api_compat/array_api_compat/cupy/__init__.py',
    'array_api_compat/array_api_compat/cupy/_aliases.py',
    'array_api_compat/array_api_compat/cupy/_info.py',
    'array_api_compat/array_api_compat/cupy/_typing.py',
    'array_api_compat/array_api_compat/cupy/fft.py',
    'array_api_compat/array_api_compat/cupy/linalg.py',
  ),

  'array_api_compat/dask': files(
    'array_api_compat/array_api_compat/dask/__init__.py',
  ),

  'array_api_compat/dask/array': files(
    'array_api_compat/array_api_compat/dask/array/__init__.py',
    'array_api_compat/array_api_compat/dask/array/_aliases.py',
    'array_api_compat/array_api_compat/dask/array/_info.py',
    'array_api_compat/array_api_compat/dask/array/fft.py',
    'array_api_compat/array_api_compat/dask/array/linalg.py',
  ),

  'array_api_compat/numpy': files(
    'array_api_compat/array_api_compat/numpy/__init__.py',
    'array_api_compat/array_api_compat/numpy/_aliases.py',
    'array_api_compat/array_api_compat/numpy/_info.py',
    'array_api_compat/array_api_compat/numpy/_typing.py',
    'array_api_compat/array_api_compat/numpy/fft.py',
    'array_api_compat/array_api_compat/numpy/linalg.py',
  ),

  'array_api_compat/torch': files(
    'array_api_compat/array_api_compat/torch/__init__.py',
    'array_api_compat/array_api_compat/torch/_aliases.py',
    'array_api_compat/array_api_compat/torch/_info.py',
    'array_api_compat/array_api_compat/torch/_typing.py',
    'array_api_compat/array_api_compat/torch/fft.py',
    'array_api_compat/array_api_compat/torch/linalg.py',
  ),
}
