project('cobyqa')

sources = {
  'cobyqa': files(
    'cobyqa/cobyqa/__init__.py',
    'cobyqa/cobyqa/framework.py',
    'cobyqa/cobyqa/main.py',
    'cobyqa/cobyqa/models.py',
    'cobyqa/cobyqa/problem.py',
    'cobyqa/cobyqa/settings.py',
  ),

  'cobyqa/subsolvers': files(
    'cobyqa/cobyqa/subsolvers/__init__.py',
    'cobyqa/cobyqa/subsolvers/geometry.py',
    'cobyqa/cobyqa/subsolvers/optim.py',
  ),

  'cobyqa/utils': files(
    'cobyqa/cobyqa/utils/__init__.py',
    'cobyqa/cobyqa/utils/exceptions.py',
    'cobyqa/cobyqa/utils/math.py',
    'cobyqa/cobyqa/utils/versions.py',
  ),
}
