project('pyprima')

sources = {
  'pyprima': files(
    'pyprima/pyprima/src/pyprima/__init__.py',
  ),

  'pyprima/common': files(
    'pyprima/pyprima/src/pyprima/common/__init__.py',
    'pyprima/pyprima/src/pyprima/common/_bounds.py',
    'pyprima/pyprima/src/pyprima/common/_linear_constraints.py',
    'pyprima/pyprima/src/pyprima/common/_nonlinear_constraints.py',
    'pyprima/pyprima/src/pyprima/common/_project.py',
    'pyprima/pyprima/src/pyprima/common/checkbreak.py',
    'pyprima/pyprima/src/pyprima/common/consts.py',
    'pyprima/pyprima/src/pyprima/common/evaluate.py',
    'pyprima/pyprima/src/pyprima/common/history.py',
    'pyprima/pyprima/src/pyprima/common/infos.py',
    'pyprima/pyprima/src/pyprima/common/linalg.py',
    'pyprima/pyprima/src/pyprima/common/message.py',
    'pyprima/pyprima/src/pyprima/common/powalg.py',
    'pyprima/pyprima/src/pyprima/common/preproc.py',
    'pyprima/pyprima/src/pyprima/common/present.py',
    'pyprima/pyprima/src/pyprima/common/ratio.py',
    'pyprima/pyprima/src/pyprima/common/redrho.py',
    'pyprima/pyprima/src/pyprima/common/selectx.py',
  ),

  'pyprima/cobyla': files(
    'pyprima/pyprima/src/pyprima/cobyla/__init__.py',
    'pyprima/pyprima/src/pyprima/cobyla/cobyla.py',
    'pyprima/pyprima/src/pyprima/cobyla/cobylb.py',
    'pyprima/pyprima/src/pyprima/cobyla/geometry.py',
    'pyprima/pyprima/src/pyprima/cobyla/initialize.py',
    'pyprima/pyprima/src/pyprima/cobyla/trustregion.py',
    'pyprima/pyprima/src/pyprima/cobyla/update.py',
  ),
}
